--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
 		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
+		"@tsconfig/node20": "^20.1.2",
+		"@types/node": "^20.11.10",
 		"@vitejs/plugin-vue": "^3.0.0",
 		"@vue/compiler-sfc": "^3.1.2",
-		"typescript": "^4.6.4",
 		"unplugin-auto-import": "^0.11.2",
 		"unplugin-vue-components": "^0.22.4",
 		"vite": "^3.0.0",
 		"vite-plugin-vue-setup-extend": "^0.4.0",
-		"vue-tsc": "^0.38.4"
+		"vue-tsc": "^0.38.4",
+		"typescript": "~5.3.0"
 	},
 	"browserslist": [
 		"> 1%",
